# arith_traits

./: Cargo.toml  README.md  rustfmt.toml
src/: check.rs  checked.rs  error.rs  general_macros.rs  impls.rs  lib.rs  op_impl_macros.rs  overflow.rs  overflowing.rs  policy.rs  saturate.rs  saturating.rs  traits.rs  wrap.rs  wrapping.rs  xl_types.rs
src/check/: unit_tests.rs
src/checked/: unit_tests.rs
src/consts/msg/: en_us.rs
src/impls/: big_int.rs  big_uint.rs
src/impls/big_int/: unit_tests.rs
src/impls/big_int/unit_tests/: wrapping_div_euclid.rs  wrapping_rem_euclid.rs
src/impls/big_uint/unit_tests/: wrapping_div_euclid.rs
src/overflow/: unit_tests.rs
src/overflowing/: unit_tests.rs
src/policy/: overflowing.rs  wrapping.rs
src/saturate/: unit_tests.rs
src/saturating/: unit_tests.rs
src/traits/: i_checked.rs  i_checked_ops.rs  i_min_max.rs  i_overflowing.rs  i_overflowing_ops.rs  i_panicking.rs  i_panicking_ops.rs  i_saturating.rs  i_saturating_ops.rs  i_wrapping.rs  i_wrapping_ops.rs
src/traits/i_checked/: unit_tests.rs
src/traits/i_checked_ops/: unit_tests.rs
src/traits/i_overflowing/: unit_tests.rs
src/traits/i_overflowing_ops/: unit_tests.rs
src/traits/i_panicking/: unit_tests.rs
src/traits/i_saturating/: unit_tests.rs
src/traits/i_saturating_ops/: unit_tests.rs
src/traits/i_wrapping/: unit_tests.rs
src/traits/i_wrapping_ops/: i_unary_wrapping_ops.rs  i_wrapping_non_generic_ops.rs  unit_tests.rs
src/wrap/: unit_tests.rs
src/wrapping/: unit_tests.rs
src/xl_types/: big_uint.rs
src/xl_types/big_uint/unit_tests/: wrapping_rem_euclid.rs
src/xl_value_types/: big_int.rs
src/xl_value_types/big_int/unit_tests/: wrapping_div_euclid.rs
