[package]
authors = ["u007d <b2b@humanenginuity.com>"]
categories = []
description = "Traits unifying types based on various supported arithmetic operations."
edition = "2018"
keywords = ["arithmetic", "numeric", "traits"]
license = "MIT OR Apache-2.0"
name = "arith_traits"
readme = "README.md"
repository = "https://github.com/u007d/arith_traits"
version = "0.1.0"

[dependencies]
thiserror = "1"

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false

[dev-dependencies]
num-traits = "0.2"
